--- a/review.tex
+++ b/review.tex
@@ -43,7 +43,7 @@
 
 \author[1]{Chenling Xu Antelope}
 \author[2]{Lars Hubatsch}
-\author[3,4]{Juste Raimbault}
+\author[3,4,*]{Juste Raimbault}
 \author[5]{Jesus Mario Serna}
 
 
@@ -52,9 +52,9 @@
 \affil[2]{The Francis Crick Institute, London, UK}
 \affil[3]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
 \affil[4]{UMR-T 9403 IFSTTAR LVMT, Champs-sur-Marne, France}
-\affil[5]{Affiliation, department, city, postcode, country}
+\affil[5]{Universit{\'e} Paris VII, Paris, France}
 
-\affil[*]{corresponding.author@email.example}
+\affil[*]{juste.raimbault@polytechnique.edu}
 
 %\affil[+]{these authors contributed equally to this work}
 
@@ -92,7 +92,7 @@ The notion of morphogenesis seems to play an important role in the study of a br
 %%%%%%%%%%%%%%%%%%%%%%%
 \section*{Introduction}
 
-At \comment{Lars: I think 'during' would be better?} every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, then electrical, and now, computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasizes the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in~\cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we propose to do. Furthermore, examples are far from exhausted and our review is thus complementary.
+During every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, then electrical, and now, computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasizes the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in~\cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we propose to do. Furthermore, examples are far from exhausted and our review is thus complementary.
 
 The rest of this paper is organized as follows : we provide first a compartmentalized review of the notion of morphogenesis across various fields, ranging from biology to social sciences, psychology and territorial sciences. A synthesis is then made and a framework as general as possible proposed. We finally discuss further developments and potential application of this epistemological analysis.
 
@@ -139,10 +139,10 @@ Polarity formation in yeast division can also be explained by the reaction-diffu
 Segmentation usually involves a more complex system than the two previously discussed example, because the pattern it generates needs to be robust to ensure the correct function, and thus cannot be sensitive to variation in initial conditions. 
 
 \subsubsection*{The French Flag Model}
-Similar to the reaction-diffusion framework the French Flag Model was initially conceived to explain differentiation of cells in a regular fashion - for example stripes of cells within a tissue developing different fates. Similar to a French flag, which has three differently colored stripes, cells within a tissue where thought to assume different fates if they sense different amounts of a certain protein - generically called a morphogen. The only necessity for this to work is a graded concentration of the morphogen. This can be achieved if the morphogen is only produced locally and then diffuses across the tissue, away from the source. In order to achieve a stable gradient, on top of local protein production the system also needs either long range inhibition, a sink opposite the source, or a degradation mechanism within the tissue (reviewed in cite{wolpert2011}).
+Similar to the reaction-diffusion framework the French Flag Model was initially conceived to explain differentiation of cells in a regular fashion - for example stripes of cells within a tissue developing different fates. Similar to a French flag, which has three differently colored stripes, cells within a tissue where thought to assume different fates if they sense different amounts of a certain protein - generically called a morphogen. The only necessity for this to work is a graded concentration of the morphogen. This can be achieved if the morphogen is only produced locally and then diffuses across the tissue, away from the source. In order to achieve a stable gradient, on top of local protein production the system also needs either long range inhibition, a sink opposite the source, or a degradation mechanism within the tissue (reviewed in \cite{wolpert2011}).
 
 Once the gradient is set up, the morphogen concentration needs to be translated 
-To the author's knowledge there is no single well understood system, but there is evidence at least on a coarse grain level cite{wolpert2011}
+To the author's knowledge there is no single well understood system, but there is evidence at least on a coarse grain level \cite{wolpert2011}
 Precise measurements of molecular mobilities as well as production and decay rates are necessary, hard to obtain, fluorescent tags change behavior.
 There is a lot of redundancy (no ragged boundaries!).
 % Mention T.Gregor papers!
@@ -405,7 +405,12 @@ An ontological specification~\cite{livet2010ontology}, i.e. the definition of en
 
 % \item Systematize the framework : iterative construction ; systematic comparisons
 
-Our work relies for now on a broad but not \emph{systematic} review, in the sense
+Our work relies for now on a broad but not \emph{systematic} review, in the sense of the methodology used for example in therapeutic evaluation, and where they play a role as important as primary studies, new knowledge being created through systematic comparison of results and meta-analysis. It would imply in our case a multi-level approach :
+\begin{itemize}
+\item Blind systematic review, without any a priori on the fields concerned and on the way to express the notion
+\item Extraction of main fields ; extraction of synonyms and close notions (such as we did here with autopoiesis and self-assembly for example ; if needed iteration of the first general review
+\item Systematic reviews specific to each field, as 
+\end{itemize}
 
 
 %\item Algorithmic Literature Review and Text-mining : quantitative epistemology
@@ -424,7 +429,7 @@ Our work relies for now on a broad but not \emph{systematic} review, in the sens
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-%\section{Conclusion}
+\section*{Conclusion}
 
 
 
