Update on Overleaf.

--- a/review.tex
+++ b/review.tex
@@ -139,10 +139,12 @@ Polarity formation in yeast division can also be explained by the reaction-diffu
 Segmentation usually involves a more complex system than the two previously discussed example, because the pattern it generates needs to be robust to ensure the correct function, and thus cannot be sensitive to variation in initial conditions. 
 
 \subsubsection*{The French Flag Model}
-Similar to the reaction-diffusion framework the French Flag Model was initially conceived to explain differentiation of cells in a regular fashion - for example stripes of cells within a tissue developing different fates. Similar to a French flag, which has three differently colored stripes, cells within a tissue where thought to assume different fates if they sense different amounts of a certain protein - generically called a morphogen. The only necessity for this to work is a graded concentration of the morphogen. This can be achieved if the morphogen is only produced locally and then diffuses across the tissue, away from the source. In order to achieve a stable gradient, on top of local protein production the system also needs either long range inhibition, a sink opposite the source, or a degradation mechanism within the tissue (reviewed in \cite{wolpert2011}).
+Similar to the reaction-diffusion framework the French Flag Model was initially conceived to explain differentiation of cells in a regular fashion - for example stripes of cells within a tissue developing different fates. Similar to a French flag, which has three differently colored stripes, cells within a tissue where thought to assume different fates if they sense different amounts of a certain protein - generically called a morphogen. The only necessity for this to work is a graded concentration of the morphogen. This can be achieved if the morphogen is only produced locally and then diffuses across the tissue, away from the source. In order to achieve a stable gradient, on top of local protein production the system also needs either long range inhibition, a sink opposite the source, or a degradation mechanism within the tissue (reviewed in \cite{Wolpert2011}).
+% cite and use Rogers&Schier 2011
+% section combining the two above models: Raspopovic et al.
 
 Once the gradient is set up, the morphogen concentration needs to be translated 
-To the author's knowledge there is no single well understood system, but there is evidence at least on a coarse grain level \cite{wolpert2011}
+To the author's knowledge there is no single well understood system, but there is evidence at least on a coarse grain level \cite{Wolpert2011}
 Precise measurements of molecular mobilities as well as production and decay rates are necessary, hard to obtain, fluorescent tags change behavior.
 There is a lot of redundancy (no ragged boundaries!).
 % Mention T.Gregor papers!
@@ -151,11 +153,11 @@ Epithelial rearrangements are driven either by external forces (seemingly fluid 
 
 \subsection*{Embryonic development of C. elegans as an example of morphogenesis}
 \comment{Lars: Shall we have more than example? We could have another section on Drosophila}
-Lars : C Elegans : models of force transmission. how the form comes from the molecular perspective ; but only physics model.
+%Lars : C Elegans : models of force transmission. how the form comes from the molecular perspective ; but only physics model.
 
-Lars: In C. elegans emergence of shape from molecular characteristics can be divided into several steps. First, in the one cell stage, there is only minimal asymmetry in the developing embryo: it is symmetric apart from the region where the sperm has entered the oocyte, which is where symmetry will broken 'properly'. This process of symmetry breaking During early development symmetry is first broken when the sperm enters the oocyte. Prior to fertilisation, any part of the oocyte could later become head or tail. After sperm entry however, the future anterior-posterior (front-rear) axis has been determined. 
+In C. elegans emergence of shape from molecular characteristics can be divided into several steps. First, in the one cell stage, there is only minimal asymmetry in the developing embryo: it is symmetric apart from the region where the sperm has entered the oocyte, which is where symmetry will broken 'properly'. This process of symmetry breaking During early development symmetry is first broken when the sperm enters the oocyte. Prior to fertilisation, any part of the oocyte could later become head or tail. After sperm entry however, the future anterior-posterior (front-rear) axis has been determined. 
 
-position of sperm entry is somewhat random, also not large-scale, needs robust amplification to allow reproducible development. achieved via mechano-chemical coupling (see previous section on reaction-diffusion). This achieves full specification of the future head and tail by the two cell stage. breaking of left-right symmetry. D-V axis specified between 2 and 4 cell stage (EMS defines ventral), LR between four and six cell stage. This is mostly done by geometric constraints (??) and biochemical signalling, forces play a crucial role later on (and in one cell stage for symmetry breaking). A precisely regulated network gives rise to a completely determined cell lineage, reproducing animals with a near identical layout.
+position of sperm entry is somewhat random, also not large-scale, needs robust amplification to allow reproducible development. achieved via mechano-chemical coupling (see previous section on reaction-diffusion). This achieves full specification of the future head and tail by the two cell stage. breaking of left-right symmetry. D-V axis specified between 2 and 4 cell stage (EMS defines ventral), LR between four and six cell stage. This is mostly achieved by geometric constraints (??) and biochemical signalling, forces play a crucial role later on (and in one cell stage for symmetry breaking). A precisely regulated network gives rise to a completely determined cell lineage, reproducing animals with a near identical layout.
 
 %  others : qualitative description. no network stuff. rq : not necessary to have networks.
 %  fundamental idea. how does the shape control the function.
@@ -440,7 +442,7 @@ Our work relies for now on a broad but not \emph{systematic} review, in the sens
 \newpage
 
 \bibliographystyle{apalike}
-\bibliography{biblio}
+\bibliography{biblio,DevBio}
 
 
 
