--- a/biblio.bib
+++ b/biblio.bib
@@ -3,6 +3,28 @@
 
 
 
+
+@article{raimbault2015models,
+	Author = {J. Raimbault},
+	Journal = {Plurimondi. An International Forum for Research and Debate on Human Settlements},
+	Number = {15},
+	Title = {Models Coupling Urban Growth and Transportation Network Growth: An Algorithmic Systematic Review Approach},
+	Volume = {7},
+	Year = {2015}}
+
+
+
+@article{chavalarias2013phylomemetic,
+	Author = {Chavalarias, David and Cointet, Jean-Philippe},
+	Journal = {Plos One},
+	Number = {2},
+	Pages = {e54847},
+	Title = {Phylomemetic patterns in science evolution---the rise and fall of scientific fields},
+	Volume = {8},
+	Year = {2013}}
+
+
+
 @article{2015arXiv150707878C,
 	Author = {{Cottineau}, C. and {Hatna}, E. and {Arcaute}, E. and {Batty}, M.},
 	Journal = {ArXiv e-prints},
