--- a/review.tex
+++ b/review.tex
@@ -403,18 +403,22 @@ An ontological specification~\cite{livet2010ontology}, i.e. the definition of en
 
 \paragraph{Towards a more systematic construction}
 
-% \item Systematize the framework : iterative construction ; systematic comparisons
 
 Our work relies for now on a broad but not \emph{systematic} review, in the sense of the methodology used for example in therapeutic evaluation, and where they play a role as important as primary studies, new knowledge being created through systematic comparison of results and meta-analysis. It would imply in our case a multi-level approach :
 \begin{itemize}
-\item Blind systematic review, without any a priori on the fields concerned and on the way to express the notion
-\item Extraction of main fields ; extraction of synonyms and close notions (such as we did here with autopoiesis and self-assembly for example ; if needed iteration of the first general review
-\item Systematic reviews specific to each field, as 
+\item Blind systematic review, without any a priori on the fields concerned and on the way to express the notion.
+\item Extraction of main fields ; extraction of synonyms and close notions (such as we did here with autopoiesis and self-assembly for example ; if needed iteration of the first general review.
+\item Systematic reviews specific to each field, as each one has its own bibliographical databases, specific ways of communication, etc.
+\item Confrontation of each notion from one field to other fields.
 \end{itemize}
 
 
 %\item Algorithmic Literature Review and Text-mining : quantitative epistemology
 %\end{itemize}
+
+\paragraph{Quantitative Epistemology}
+
+Our position may be also strengthen by quantitative approaches to literature analysis. With text-mining, keywords and concept extraction from abstracts (or even full texts) is possible, and would allow to confront our qualitative analysis to empirical data, by answering questions such as: is a concept indeed central, or what concept is used the same way in most disciplines. \cite{chavalarias2013phylomemetic} for example reconstructs scientific fields from the bottom-up through text-mining, and studies their lineage and dynamics in time. An other approach would be an iterative extraction of concept, by an algorithmic systematic review such as the one done in~\cite{raimbault2015models}.
 
 
 
@@ -426,10 +430,10 @@ Our work relies for now on a broad but not \emph{systematic} review, in the sens
 
 % \item Apply to a particular subject/model
 
-
+Concrete applications of our framework include potential transfer of knowledge between fields. As biological systems inspire system architecture in morphogenetic engineering, or as the use of gravity models inspired from physics have flourishing applications in geography, we think that trying to decline the general framework in specific disciplines may bring analogies or new models that would have been difficult to formulate otherwise.
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\section*{Conclusion}
+%\section*{Conclusion}
 
 
 
@@ -437,7 +441,7 @@ Our work relies for now on a broad but not \emph{systematic} review, in the sens
 %%%%%%%%%%%%
 % biblio
 
-\newpage
+%\newpage
 
 \bibliographystyle{apalike}
 \bibliography{biblio}
