Update on Overleaf.

--- a/DevBio.bib
+++ b/DevBio.bib
@@ -30,6 +30,14 @@ url = {http://link.springer.com/article/10.1007/BF00289234},
 volume = {12},
 year = {1972}
 }
+@article{Sulston1983,
+author = {Sulston, J E and Schierenberg, E},
+file = {:Users/hubatsl/Documents/Mendeley/1983/Developmental Biology{\_}The Embryonic Cell Lineage of the Nematode Caenorhabditis elegans.pdf:pdf},
+journal = {Developmental Biology},
+pages = {64--119},
+title = {{The Embryonic Cell Lineage of the Nematode Caenorhabditis elegans}},
+year = {1983}
+}
 @article{Albert2003,
 abstract = {Expression of the Drosophila segment polarity genes is initiated by a pre-pattern of pair-rule gene products and maintained by a network of regulatory interactions throughout several stages of embryonic development. Analysis of a model of gene interactions based on differential equations showed that wild-type expression patterns of these genes can be obtained for a wide range of kinetic parameters, which suggests that the steady states are determined by the topology of the network and the type of regulatory interactions between components, not the detailed form of the rate laws. To investigate this, we propose and analyse a Boolean model of this network which is based on a binary ON/OFF representation of mRNA and protein levels, and in which the interactions are formulated as logical functions. In this model the spatial and temporal patterns of gene expression are determined by the topology of the network and whether components are present or absent, rather than the absolute levels of the mRNAs and proteins and the functional details of their interactions. The model is able to reproduce the wild-type gene expression patterns, as well as the ectopic expression patterns observed in overexpression experiments and various mutants. Furthermore, we compute explicitly all steady states of the network and identify the basin of attraction of each steady state. The model gives important insights into the functioning of the segment polarity gene network, such as the crucial role of the wingless and sloppy paired genes, and the network's ability to correct errors in the pre-pattern. ?? 2003 Elsevier Science Ltd. All rights reserved.},
 archivePrefix = {arXiv},
@@ -50,6 +58,15 @@ title = {{The topology of the regulatory interactions predicts the expression pa
 volume = {223},
 year = {2003}
 }
+@article{Chisholm2005,
+author = {Chisholm, Andrew D and Hardin, Jeff},
+doi = {10.1895/wormbook.1.35.1},
+file = {:Users/hubatsl/Documents/Mendeley/2005/WormBook{\_}Epidermal morphogenesis.pdf:pdf},
+journal = {WormBook},
+pages = {1--22},
+title = {{Epidermal morphogenesis}},
+year = {2005}
+}
 @article{Yamada2007,
 abstract = {Three-dimensional (3D) in vitro models span the gap between two-dimensional cell cultures and whole-animal systems. By mimicking features of the in vivo environment and taking advantage of the same tools used to study cells in traditional cell culture, 3D models provide unique perspectives on the behavior of stem cells, developing tissues and organs, and tumors. These models may help to accelerate translational research in cancer biology and tissue engineering. ?? 2007 Elsevier Inc. All rights reserved.},
 author = {Yamada, Kenneth M. and Cukierman, Edna},
@@ -63,6 +80,17 @@ pages = {601--610},
 pmid = {17719539},
 title = {{Modeling Tissue Morphogenesis and Cancer in 3D}},
 volume = {130},
+year = {2007}
+}
+@article{Lecuit2007,
+author = {Lecuit, Thomas and Lenne, Pierre-fran{\c{c}}ois},
+doi = {10.1038/nrm2222},
+file = {:Users/hubatsl/Documents/Mendeley/2007/Nat Rev Mol Cell Biol{\_}Cell surface mechanics and the control of cell shape, tissue patterns and morphogenesis.pdf:pdf},
+journal = {Nat Rev Mol Cell Biol},
+number = {August},
+pages = {633--644},
+title = {{Cell surface mechanics and the control of cell shape, tissue patterns and morphogenesis}},
+volume = {8},
 year = {2007}
 }
 @article{Jaeger2009,
@@ -120,6 +148,36 @@ title = {{Reaction-Diffusion Model as a Framework for Understanding Biological P
 url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1179047},
 volume = {329},
 year = {2010}
+}
+@article{Zhang2011,
+abstract = {Mechanotransduction refers to the transformation of physical forces into chemical signals. It generally involves stretch-sensitive channels or conformational change of cytoskeleton-associated proteins. Mechanotransduction is crucial for the physiology of several organs and for cell migration. The extent to which mechanical inputs contribute to development, and how they do this, remains poorly defined. Here we show that a mechanotransduction pathway operates between the body-wall muscles of Caenorhabditis elegans and the epidermis. This pathway involves, in addition to a Rac GTPase, three signalling proteins found at the hemidesmosome: p21-activated kinase (PAK-1), the adaptor GIT-1 and its partner PIX-1. The phosphorylation of intermediate filaments is one output of this pathway. Tension exerted by adjacent muscles or externally exerted mechanical pressure maintains GIT-1 at hemidesmosomes and stimulates PAK-1 activity through PIX-1 and Rac. This pathway promotes the maturation of a hemidesmosome into a junction that can resist mechanical stress and contributes to coordinating the morphogenesis of epidermal and muscle tissues. Our findings suggest that the C. elegans hemidesmosome is not only an attachment structure, but also a mechanosensor that responds to tension by triggering signalling processes. We suggest that similar pathways could promote epithelial morphogenesis or wound healing in other organisms in which epithelial cells adhere to tension-generating contractile cells.},
+annote = {Zhang, Huimin
+Landmann, Frederic
+Zahreddine, Hala
+Rodriguez, David
+Koch, Marc
+Labouesse, Michel
+eng
+Research Support, Non-U.S. Gov't
+England
+2011/03/04 06:00
+Nature. 2011 Mar 3;471(7336):99-103. doi: 10.1038/nature09765.},
+author = {Zhang, H and Landmann, F and Zahreddine, H and Rodriguez, D and Koch, M and Labouesse, M},
+doi = {10.1038/nature09765},
+file = {:Users/hubatsl/Documents/Mendeley/2011/Nature{\_}A tension-induced mechanotransduction pathway promotes epithelial morphogenesis.pdf:pdf},
+isbn = {1476-4687 (Electronic)
+0028-0836 (Linking)},
+journal = {Nature},
+keywords = {*Morphogenesis,Animals,Caenorhabditis elegans Proteins/metabolism,Caenorhabditis elegans/cytology/*embryology/enzymo,Carrier Proteins/metabolism,Epidermis/cytology/*embryology,Hemidesmosomes/metabolism,Intermediate Filaments/metabolism,Mechanotransduction, Cellular/*physiology,Muscle Contraction/*physiology,Muscles/embryology/physiology,Phenotype,Phosphorylation,Signal Transduction,p21-Activated Kinases/metabolism,r00461},
+language = {English},
+mendeley-tags = {r00461},
+number = {7336},
+pages = {99--103},
+pmid = {21368832},
+title = {{A tension-induced mechanotransduction pathway promotes epithelial morphogenesis}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21368832 http://www.nature.com/nature/journal/v471/n7336/pdf/nature09765.pdf},
+volume = {471},
+year = {2011}
 }
 @article{Lander2011,
 abstract = {Systems biology seeks not only to discover the machinery of life but to understand how such machinery is used for control, i.e., for regulation that achieves or maintains a desired, useful end. This sort of goal-directed, engineering-centered approach also has deep historical roots in developmental biology. Not surprisingly, developmental biology is currently enjoying an influx of ideas and methods from systems biology. This Review highlights current efforts to elucidate design principles underlying the engineering objectives of robustness, precision, and scaling as they relate to the developmental control of growth and pattern formation. Examples from vertebrate and invertebrate development are used to illustrate general lessons, including the value of integral feedback in achieving set-point control; the usefulness of self-organizing behavior; the importance of recognizing and appropriately handling noise; and the absence of "free lunch." By illuminating such principles, systems biology is helping to create a functional framework within which to make sense of the mechanistic complexity of organismal development.},
@@ -197,6 +255,33 @@ title = {{Forces in tissue morphogenesis and patterning}},
 volume = {153},
 year = {2013}
 }
+@article{Goehring2013,
+abstract = {Nearly every cell type exhibits some form of polarity, yet the molecular mechanisms vary widely. Here we examine what we term 'chemical systems' where cell polarization arises through biochemical interactions in signaling pathways, 'mechanical systems' where cells polarize due to forces, stresses and transport, and 'mechanochemical systems' where polarization results from interplay between mechanics and chemical signaling. To reveal potentially unifying principles, we discuss mathematical conceptualizations of several prototypical examples. We suggest that the concept of local activation and global inhibition - originally developed to explain spatial patterning in reaction-diffusion systems - provides a framework for understanding many cases of cell polarity. Importantly, we find that the core ingredients in this framework - symmetry breaking, self-amplifying feedback, and long-range inhibition - involve processes that can be chemical, mechanical, or even mechanochemical in nature.},
+annote = {Goehring, Nathan W
+Grill, Stephan W
+eng
+Research Support, Non-U.S. Gov't
+Review
+England
+2012/11/28 06:00
+Trends Cell Biol. 2013 Feb;23(2):72-80. doi: 10.1016/j.tcb.2012.10.009. Epub 2012 Nov 23.},
+author = {Goehring, N W and Grill, S W},
+doi = {10.1016/j.tcb.2012.10.009},
+file = {:Users/hubatsl/Documents/Mendeley/2013/Trends Cell Biol{\_}Cell polarity mechanochemical patterning.pdf:pdf},
+isbn = {1879-3088 (Electronic)
+0962-8924 (Linking)},
+journal = {Trends Cell Biol},
+keywords = {*Cell Polarity,*Mechanotransduction, Cellular,Actins/chemistry,Animals,Biological Transport,Cell Membrane/chemistry/enzymology,Cytoskeleton/*chemistry/enzymology,Drosophila Proteins/chemistry,Drosophila/chemistry/enzymology,Enzyme Activation,Feedback, Physiological,Glycogen Synthase Kinase 3/chemistry,Polymerization,Protein Binding,Stress, Mechanical,Yeasts/chemistry/enzymology,cdc42 GTP-Binding Protein, Saccharomyces cerevisia,par modelling,r00262},
+language = {English},
+mendeley-tags = {par modelling,r00262},
+number = {2},
+pages = {72--80},
+pmid = {23182746},
+title = {{Cell polarity: mechanochemical patterning}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23182746 http://ac.els-cdn.com/S0962892412002012/1-s2.0-S0962892412002012-main.pdf?{\_}tid=227eaa66-a8b9-11e5-ac7e-00000aab0f6b{\&}acdnat=1450795060{\_}82f676d53cd23e34154247b0fd515dbb},
+volume = {23},
+year = {2013}
+}
 @article{Guillot2013,
 author = {Guillot, C. and Lencuit, T.},
 doi = {10.1126/science.1235249},
@@ -271,6 +356,32 @@ pmid = {25082703},
 title = {{Modeling digits. Digit patterning is controlled by a Bmp-Sox9-Wnt Turing network modulated by morphogen gradients}},
 url = {http://www.ncbi.nlm.nih.gov/pubmed/25082703 http://www.sciencemag.org/content/345/6196/566.full.pdf},
 volume = {345},
+year = {2014}
+}
+@article{Rose2014,
+abstract = {Polarity establishment, asymmetric division, and acquisition of cell fates are critical steps during early development. In this review, we discuss processes that set up the embryonic axes, with an emphasis on polarity establishment and asymmetric division. We begin with the first asymmetric division in the C. elegans embryo, where symmetry is broken by the local inactivation of actomyosin cortical contractility. This contributes to establishing a polarized distribution of PAR proteins and associated components on the cell cortex along the longitudinal embryonic axis, which becomes the anterior-posterior (AP) axis. Thereafter, AP polarity is maintained through reciprocal negative interactions between the anterior and posterior cortical domains. We then review the mechanisms that ensure proper positioning of the centrosomes and the mitotic spindle in the one-cell embryo by exerting pulling forces on astral microtubules. We explain how a ternary complex comprised of Galpha (GOA-1/GPA-16), GPR-1/GPR-2, and LIN-5 is essential for anchoring the motor protein dynein to the cell cortex, where it is thought to exert pulling forces on depolymerizing astral microtubules. We proceed by providing an overview of cell cycle asynchrony in two-cell embryos, as well as the cell signaling and spindle positioning events that underly the subsequent asymmetric divisions, which establish the dorsal-ventral and left-right axes. We then discuss how AP polarity ensures the unequal segregation of cell fate regulators via the cytoplasmic proteins MEX-5/MEX-6 and other polarity mediators, before ending with an overview of how the fates of the early blastomeres are specified by these processes.},
+annote = {Rose, Lesilee
+Gonczy, Pierre
+eng
+R01GM068744/GM/NIGMS NIH HHS/
+Research Support, N.I.H., Extramural
+Research Support, Non-U.S. Gov't
+Review
+2014/12/31 06:00
+WormBook. 2014 Dec 30:1-43. doi: 10.1895/wormbook.1.30.2.},
+author = {Rose, L and Gonczy, P},
+doi = {10.1895/wormbook.1.30.2},
+file = {:Users/hubatsl/Documents/Mendeley/2014/WormBook{\_}Polarity establishment, asymmetric division and segregation of fate determinants in early C. elegans embryos.pdf:pdf},
+isbn = {1551-8507 (Electronic)
+1551-8507 (Linking)},
+journal = {WormBook},
+keywords = {*Asymmetric Cell Division,*Body Patterning,*Cell Lineage,Animals,Caenorhabditis elegans/cytology/*embryology,Embryo, Nonmammalian/cytology,Spindle Apparatus/physiology,r00093},
+language = {English},
+mendeley-tags = {r00093},
+pages = {1--43},
+pmid = {25548889},
+title = {{Polarity establishment, asymmetric division and segregation of fate determinants in early C. elegans embryos}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/25548889},
 year = {2014}
 }
 @article{Martin2014a,
