Update on Overleaf.

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,6 +2,43 @@
 
 
 
+@article{Rajapakse14022017,
+author = {Rajapakse, Indika and Smale, Stephen}, 
+title = {Emergence of function from coordinated cells in a tissue},
+volume = {114}, 
+number = {7}, 
+pages = {1462-1467}, 
+year = {2017}, 
+doi = {10.1073/pnas.1621145114}, 
+abstract ={This work presents a mathematical study of tissue dynamics. We combine within-cell genome dynamics and diffusion between cells, so that the synthesis of the two gives rise to the emergence of function, akin to establishing “tissue homeostasis.” We introduce two concepts, monotonicity and a weak version of hardwiring. These together are sufficient for global convergence of the tissue dynamics.}, 
+URL = {http://www.pnas.org/content/114/7/1462.abstract}, 
+eprint = {http://www.pnas.org/content/114/7/1462.full.pdf}, 
+journal = {Proceedings of the National Academy of Sciences} 
+}
+
+
+
+
+@article{levy2005formes,
+	Author = {L{\'e}vy, Albert},
+	Journal = {Espaces et soci{\'e}t{\'e}s},
+	Number = {3},
+	Pages = {25--48},
+	Title = {Formes urbaines et significations: revisiter la morphologie urbaine},
+	Year = {2005}}
+
+
+
+@article{desmarais1992premisses,
+  title={Des pr{\'e}misses de la th{\'e}orie de la forme urbaine au parcours morphog{\'e}n{\'e}tique de l’{\'e}tablissement humain},
+  author={Desmarais, Ga{\"e}tan},
+  journal={Cahiers de g{\'e}ographie du Qu{\'e}bec},
+  volume={36},
+  number={98},
+  pages={251--273},
+  year={1992},
+  publisher={D{\'e}partement de g{\'e}ographie de l'Universit{\'e} Laval}
+}
 
 
 @article{raimbault2015models,
