--- a/paper.tex
+++ b/paper.tex
@@ -6,8 +6,8 @@
 
 %%%%%
 % variable to include comments or not in the compilation ; set to 1 to include
-%\def \draft {1}
-\def \draft {0}
+\def \draft {1}
+%\def \draft {0}
 
 
 % writing utilities
@@ -100,6 +100,12 @@ During every historical period, people use the main technological advance as a m
 \end{enumerate}  A similar effort is described in~\cite{bourgine2010morphogenesis}, but it consists more of a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we propose to do. Furthermore, examples are far from exhausted and our review is thus complementary.
 
 The rest of this paper is organized as follows : we provide first a compartmentalized review of the notion of morphogenesis across various fields, ranging from biology to social sciences, psychology and territorial sciences. A synthesis is then made and a framework as general as possible proposed. We finally discuss further developments and potential application of this epistemological analysis.
+
+
+%%%%%%%%%
+% Quote from Villani on Morphogenesis (thanks Mario !)
+% Morphogenesis as a discipline that is not yet very clearly identified, having still lots of mystery, it is in the intersection between mathematics, chemistry and biology. Typically it is in chemical reactions produced in the development of living beings, where some mathematical models play a role to make structures emerge, so it really makes these 3 intervene (math, chem, biol). And Turing identified that when we put together and at the same time a diffusion phenomenon -with a substance that spreads in an organism- and a chemical reaction, we can end up with instabilities. And for example, these instabilities make the leopard's skin, where you can see black spots, instead of black being evenly distributed. And this incredible article by Turing was a struck of genius, to think that by putting together two stable phenomena -because this chemical reaction is a stable phenomena, and the diffusion is a stable phenomena- one could have an instability. Completely counter-intuitive, but mathematics is precisely that which can permit us to go beyond intuition.
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -205,6 +211,9 @@ Prior to fertilization, any part of the oocyte could later become head or tail. 
 %\cite{han2016coordinating}
 
 
+\comment{(Juste) I also saw this PNAS paper that just came out : \cite{Rajapakse14022017} Indika Rajapakse and Stephen Smale, Emergence of function from coordinated cells in a tissue, PNAS 2017 114 (7) 1462-1467. they do a mathematical analysis of coupling within cell genome dynamics and diffusion between cell, to show the emergence of the function of an organ. I don't know how new/relevant it is but I find the idea of highlighting the function a possible good transition with the following part ? (and since this notion is central for our synthesis). they call that tissue homeostasis, i don't know how far it is from morphogenesis ?}
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
@@ -228,7 +237,8 @@ The concept is used in various disciplines dealing with territories and the buil
 
 Architecture and Urbanism are disciplines studying human settlements and the built environment at relatively small scales. Olsen's theory of Urban Metabolism \cite{olsen1982urban} links city morphogenesis with urban metabolism and urban ecology. The city is seen as a living organism with different time scales of evolution (the life cycles). The study of Urban Morphology~\cite{moudon1997urban}, which focuses on morphogenetic processes, is presented as an emerging field in itself, across geography, architecture and urban planning: this view emphasizes the crucial role of the form in these kind of processes. \cite{burke1972dublin} studies the growth of a particular city during a given period of time, and attributes the evolution of urban morphology to \emph{morphogenetic agents}, i.e. people and developers. At another scale, in architecture, a building can be seen as the results of micro-processes making sense and a particular architectural style interpreted through the use of generative shape grammars~\cite{ceccarini2001essai}. This methodology is not far from the work of C. Alexander, an illuminated architect who produced a theory of design process \cite{mehaffy2007notes}, inspired from computer science and biology and linked in some aspects to complexity. The notion of morphogenesis is in that case however quite loose, as referring to the process of form generation in general, such as~\cite{whitehand1999urban} that studies concrete changes in house forms as witnesses of urban morphogenesis. Dollens refers to autopoiesis~\cite{dollens2014alan}, implying a particular case of morphogenesis, to advocate Turing's influence on current design thinking, and to propose a more organic approach to architecture.
 
-
+\cite{desmarais1992premisses}
+\cite{levy2005formes}
 
 
 
